--- a/src/assets/platforms/nintendo.scss
+++ b/src/assets/platforms/nintendo.scss
@@ -91,6 +91,72 @@
       content: 'R';
     }
 
+    &--variant-switch {
+      &.gamepad-button {
+        &--arrow-left,
+        &--arrow-up,
+        &--arrow-down,
+        &--arrow-right {
+          width: 24px;
+          height: 24px;
+          line-height: 24px;
+          border-radius: 50%;
+          top: inherit !important;
+          margin: 0 !important;
+
+          &:after {
+            margin: 0;
+            top: 50%;
+            left: 50%;
+            bottom: initial !important;
+            right: initial !important;
+            filter: drop-shadow(0 1px 0 rgba(255, 255, 255, 0.05));
+
+            transform: translate(-50%, -50%);
+            z-index: 99;
+          }
+        }
+
+        &--arrow-up {
+          &:after {
+            border-width: 0 5px 8px 5px;
+            border-bottom-color: #333;
+            top: 11px;
+          }
+        }
+        &--arrow-down {
+          &:after {
+            border-width: 8px 5px 0 5px;
+            border-top-color: #333;
+            top: 12px;
+          }
+        }
+        &--arrow-left {
+          &:after {
+            border-width: 5px 8px 5px 0;
+            border-right-color: #333;
+            margin-left: -1px;
+          }
+        }
+        &--arrow-right {
+          &:after {
+            border-width: 5px 0 5px 8px;
+            border-left-color: #333;
+            margin-left: 1px;
+          }
+        }
+      }
+
+      &.gamepad-button-nintendo {
+        &--a,
+        &--b,
+        &--x,
+        &--y {
+          font-size: 16px;
+        }
+      }
+    }
+
     &--variant-gbc {
       &.gamepad-button-nintendo {
         &--start, &--select {
