--- a/src/assets/platforms/nintendo.scss
+++ b/src/assets/platforms/nintendo.scss
@@ -1,61 +1,16 @@
 .gamepad-button {
   &-nintendo {
-    &:before, &:after {
-      content: '';
-      position: absolute;
-      text-indent: initial;
-      text-align: center;
-    }
+    @include gamepad-generic-label;
 
-    &--a, &--b, &--x, &--y,
-    &--zl, &--zr, &--l, &--r,
-    &--start, &--select {
-      background-image: linear-gradient(#5f5e60, #3C3D3F);
-      box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
-    }
-
-    &--a, &--b, &--x, &--y,
-    &--zl, &--zr, &--l, &--r {
-      font-family: 'RationalTWDisplay';
-      font-style: normal;
-    }
-
-    &--a,
-    &--b,
-    &--x,
-    &--y {
-      font-family: Roboto, "Open sans", Helvetica, Arial;
-      font-size: 20px;
-      line-height: 24px;
-      font-weight: 400;
-      text-transform: uppercase;
-      text-align: center;
-      position: relative;
-      box-sizing: border-box;
-      border: none;
-      outline: none;
-      border-radius: 100%;
-      vertical-align: top;
-      padding: 0;
-      transition: all 0.1s ease;
-      text-shadow: 0 0 0.3em #302800;
+    &--a, &--b, &--x, &--y {
+      @include gamepad-generic-button-background;
+      @include gamepad-generic-button-rounded;
     }
 
     &--zl, &--zr {
-      border-radius: 5px;
-      position: relative;
-      height: 21px;
-      width: 34px;
-      top: 2px;
-      user-select: none;
-      text-indent: -9999px;
-
-      &::after {
-        font-size: 12px;
-        top: -1px;
-        left: 0;
-        right: 0;
-      }
+      @include gamepad-generic-button-background;
+      @include gamepad-generic-trigger;
+      @include gamepad-generic-trigger-primary;
     }
 
     &--zl::after {
@@ -67,20 +22,9 @@
     }
 
     &--l, &--r {
-      position: relative;
-      top: 2px;
-      border-radius: 5px 5px 50% 50%;
-      height: 21px;
-      width: 32px;
-      user-select: none;
-      text-indent: -9999px;
-
-      &::after {
-        font-size: 12px;
-        top: -1px;
-        left: 0;
-        right: 0;
-      }
+      @include gamepad-generic-button-background;
+      @include gamepad-generic-trigger;
+      @include gamepad-generic-trigger-secondary;
     }
 
     &--l::after {
@@ -97,53 +41,20 @@
         &--arrow-up,
         &--arrow-down,
         &--arrow-right {
-          width: 24px;
-          height: 24px;
-          line-height: 24px;
-          border-radius: 50%;
-          top: inherit !important;
-          margin: 0 !important;
-
-          &:after {
-            margin: 0;
-            top: 50%;
-            left: 50%;
-            bottom: initial !important;
-            right: initial !important;
-            filter: drop-shadow(0 1px 0 rgba(255, 255, 255, 0.05));
-
-            transform: translate(-50%, -50%);
-            z-index: 99;
-          }
+          @include gamepad-generic-arrow-rounded;
         }
 
         &--arrow-up {
-          &:after {
-            border-width: 0 5px 8px 5px;
-            border-bottom-color: #333;
-            top: 11px;
-          }
+          @include gamepad-generic-arrow-rounded-up;
         }
         &--arrow-down {
-          &:after {
-            border-width: 8px 5px 0 5px;
-            border-top-color: #333;
-            top: 12px;
-          }
+          @include gamepad-generic-arrow-rounded-down;
         }
         &--arrow-left {
-          &:after {
-            border-width: 5px 8px 5px 0;
-            border-right-color: #333;
-            margin-left: -1px;
-          }
+          @include gamepad-generic-arrow-rounded-left;
         }
         &--arrow-right {
-          &:after {
-            border-width: 5px 0 5px 8px;
-            border-left-color: #333;
-            margin-left: 1px;
-          }
+          @include gamepad-generic-arrow-rounded-right;
         }
       }
 
@@ -160,17 +71,8 @@
     &--variant-gbc {
       &.gamepad-button-nintendo {
         &--start, &--select {
-          margin-top: 1px;
-          margin-left: 5px;
-          margin-right: 7px;
-          height: 7px;
-          border-radius: 4px;
-          text-indent: -9999px;
-
-          &::before {
-            font-size: 11px;
-            top: 7px;
-          }
+          @include gamepad-generic-button-background;
+          @include gamepad-generic-selects;
         }
 
         &--start::before {
