--- a/src/assets/platforms/playstation.scss
+++ b/src/assets/platforms/playstation.scss
@@ -12,8 +12,8 @@
     &--square, &--circle, &--cross, &--triangle,
     &--l1, &--l2, &--l3, &--r1, &--r2, &--r3,
     &--select, &--ps {
-      background-image: linear-gradient(#5f5e60, #3C3D3F);
-      box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
+      background-image: var(--gamepad-button-background);
+      box-shadow: var(--gamepad-button-box-shadow-top);
     }
 
     &--square, &--circle, &--cross, &--triangle,
