--- a/src/assets/platforms/xbox.scss
+++ b/src/assets/platforms/xbox.scss
@@ -8,8 +8,8 @@
     }
 
     &--lt, &--lb, &--rt, &--rb, &--l3, &--r3 {
-      background-image: linear-gradient(#5f5e60, #3C3D3F);
-      box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
+      background-image: var(--gamepad-button-background);
+      box-shadow: var(--gamepad-button-box-shadow-top);
       font-family: 'RationalTWDisplay';
       font-style: normal;
     }
@@ -25,7 +25,7 @@
       box-sizing: border-box;
       border: none;
       outline: none;
-      background-image: linear-gradient(#5f5e60, #3C3D3F);
+      background-image: var(--gamepad-button-background);
       border-radius: 100%;
       padding: 0;
       transition: all 0.1s ease;
@@ -127,7 +127,7 @@
       border-radius: 50px;
       padding: 4px;
       margin-top: -4px;
-      background-image: linear-gradient(#5f5e60, #3C3D3F);
+      background-image: var(--gamepad-button-background);
       position: relative;
       height: 24px;
       line-height: 24px;
