--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -204,7 +204,24 @@
     right: 0;
   }
 }
-@mixin gamepad-generic-selects {
+@mixin gamepad-generic-stick {
+  border-radius: 50px;
+  padding: 4px;
+  margin-top: -4px;
+  height: 32px;
+  line-height: 32px;
+  width: 32px;
+
+  &::after {
+    font-family: 'RationalTWDisplay';
+    font-style: normal;
+    font-size: 11px;
+    top: 1px;
+    left: 0;
+    right: 0;
+  }
+}
+@mixin gamepad-generic-select {
   margin-top: 1px;
   margin-left: 5px;
   margin-right: 7px;
@@ -217,7 +234,7 @@
     top: 7px;
   }
 }
-@mixin gamepad-generic-label {
+@mixin gamepad-generic-pseudo-label {
   &:before, &:after {
     content: '';
     position: absolute;
