--- a/src/assets/platforms/xbox.scss
+++ b/src/assets/platforms/xbox.scss
@@ -1,34 +1,12 @@
 .gamepad-button {
   &-xbox {
-    &:before, &:after {
-      content: '';
-      position: absolute;
-      text-indent: initial;
-      text-align: center;
-    }
-
-    &--lt, &--lb, &--rt, &--rb, &--l3, &--r3 {
-      background-image: var(--gamepad-button-background);
-      box-shadow: var(--gamepad-button-box-shadow-top);
-      font-family: 'RationalTWDisplay';
-      font-style: normal;
-    }
+    @include gamepad-generic-pseudo-label;
 
     &--a, &--b, &--x, &--y {
-      font-family: Roboto, "Open sans", Helvetica, Arial;
-      font-size: 20px;
-      line-height: 24px;
+      @include gamepad-generic-button;
+      @include gamepad-generic-button-background;
+      @include gamepad-generic-button-rounded;
       font-weight: 700;
-      text-transform: uppercase;
-      text-align: center;
-      position: relative;
-      box-sizing: border-box;
-      border: none;
-      outline: none;
-      background-image: var(--gamepad-button-background);
-      border-radius: 100%;
-      padding: 0;
-      transition: all 0.1s ease;
     }
 
     &--a {
@@ -72,33 +50,10 @@
       }
     }
 
-    &--lb, &--rb, &--lt, &--rt {
-      border-radius: 5px;
-      position: relative;
-      will-change: box-shadow;
-      top: 2px;
-      user-select: none;
-      text-indent: -9999px;
-
-      &::after {
-        font-size: 11px;
-        top: -1px;
-        left: 0;
-        right: 0;
-      }
-    }
-
     &--lb, &--rb {
-      height: 21px;
-      width: 34px;
-      top: 2px;
-
-      &::after {
-        font-size: 12px;
-        top: -1px;
-        left: 0;
-        right: 0;
-      }
+      @include gamepad-generic-button-background;
+      @include gamepad-generic-trigger;
+      @include gamepad-generic-trigger-primary;
     }
 
     &--lb::after {
@@ -110,9 +65,9 @@
     }
 
     &--lt, &--rt {
-      border-radius: 5px 5px 50% 50%;
-      height: 21px;
-      width: 32px;
+      @include gamepad-generic-button-background;
+      @include gamepad-generic-trigger;
+      @include gamepad-generic-trigger-secondary;
     }
 
     &--lt::after {
@@ -124,22 +79,9 @@
     }
 
     &--l3, &--r3 {
-      border-radius: 50px;
-      padding: 4px;
-      margin-top: -4px;
-      background-image: var(--gamepad-button-background);
-      position: relative;
-      height: 24px;
-      line-height: 24px;
-      width: 24px;
       text-indent: -9999px;
-
-      &::after {
-        font-size: 11px;
-        top: 5px;
-        left: 0;
-        right: 0;
-      }
+      @include gamepad-generic-button-background;
+      @include gamepad-generic-stick;
     }
 
     &--l3::after {
