--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -245,7 +245,7 @@
 .gamepad-button {
   --gamepad-button-background: linear-gradient(#5f5e60, #3C3D3F);
   --gamepad-button-box-shadow-top: inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
-  --gamepad-button-drop-shadow: drop-shadow(0 2px 2px black);
+  --gamepad-button-drop-shadow: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.5));
 
   @include gamepad-generic-button;
 
