--- a/src/assets/demo.scss
+++ b/src/assets/demo.scss
@@ -27,7 +27,7 @@ body {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 2rem 4.5rem 2rem;
   text-align: center;
 
   h6 {
