Make demo responsive

--- a/src/assets/demo.scss
+++ b/src/assets/demo.scss
@@ -25,9 +25,8 @@ body {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem 2rem 4.5rem 2rem;
+  padding: 2rem 0 4rem 0;
   text-align: center;
 
   h6 {
